--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+# Processamento Digital de Imagens
+
+Esta página contém os códigos desenvolvidos para a disciplinda de PDI (2018.1)
+
+## Seção 2 - Exercícios
+### Questão 1
+
